...
            if (isTopLevel) {
                TopAppBar(
                    title = {
                        Text(
                            text = Screen.resolveTitle(currentRoute),
                            fontWeight = FontWeight.Bold,
                            modifier = Modifier.testTag("topbar-title")
                        )
                    },
                    actions = {
                        IconButton(onClick = {
                            navController.navigate(Screen.Search.route) { launchSingleTop = true }
                        }) {
...
